[gd_scene load_steps=5 format=3 uid="uid://c065dlbwy0p4n"]

[ext_resource type="Script" path="res://user_text_box.gd" id="1_m044k"]
[ext_resource type="FontFile" uid="uid://bbvqbvo8bcb8f" path="res://Xolonium-Regular.ttf" id="2_ltbgr"]
[ext_resource type="Texture2D" uid="uid://dyinmgj3dnbc8" path="res://botao.png" id="3_k422x"]
[ext_resource type="Texture2D" uid="uid://dql2ll47o10r" path="res://botao_pressionado.png" id="4_md1i6"]

[node name="UserTextBox" type="CanvasLayer"]
offset = Vector2(250, 400)
scale = Vector2(0.25, 0.25)
transform = Transform2D(0.25, 0, 0, 0.25, 250, 400)
script = ExtResource("1_m044k")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -908.0
offset_top = -296.0
offset_right = 908.0
offset_bottom = 440.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -900.0
offset_top = -288.0
offset_right = 900.0
offset_bottom = 432.0
color = Color(0.54099, 0.54099, 0.54099, 1)

[node name="Label" type="Label" parent="."]
offset_left = -690.0
offset_top = -135.0
offset_right = 749.0
offset_bottom = -13.0
theme_override_fonts/font = ExtResource("2_ltbgr")
theme_override_font_sizes/font_size = 90
text = "Insira o ângulo de lançamento:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 225.0
offset_top = 31.0
offset_right = 265.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("2_ltbgr")
theme_override_font_sizes/font_size = 90
text = "º"

[node name="Label3" type="Label" parent="."]
offset_left = -156.0
offset_top = -5.0
offset_right = 162.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 90
text = "Lançar:"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = -193.0
offset_top = 6.0
offset_right = 197.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 70

[node name="TButton" type="TextureButton" parent="."]
offset_left = -196.0
offset_top = 104.0
offset_right = 188.0
offset_bottom = 488.0
texture_normal = ExtResource("3_k422x")
texture_pressed = ExtResource("4_md1i6")
stretch_mode = 0

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="TButton" to="." method="_on_button_pressed"]
